<resources>

    <string name="app_name">Classmate</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="title_messages">Messages</string>
    <string name="title_notifications">Notifications</string>


    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="next">Next</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First name</string>
    <string name="school">School</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="send_a_message">Send A Message</string>
    <string name="handle">Handle</string>
    <string name="grade">Grade</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_calendar">Calendar</string>

</resources>