<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:alpha="1"
    android:background="@color/background_color"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/background_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".6"
        android:background="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_box"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_box"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_icon"
        android:autofillHints="" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_blue"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <TextView
        android:id="@+id/create_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/create_account"
        android:textColor="#0D318C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="239dp"
        android:layout_height="186dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account_circle_grey"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>
